Bug 271929 - Quanta/Kdevelop : Xdebug : debug stepping is not reflected in document
Summary: Quanta/Kdevelop : Xdebug : debug stepping is not reflected in document
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: xdebug (other bugs)
Version First Reported In: CVS HEAD
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-28 17:27 UTC by jay
Modified: 2011-08-27 14:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch for the missing signal parameter which fixes this bug (3.84 KB, patch)
2011-08-27 13:48 UTC, Florian 'branleb' Zumkeller-Quast
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jay 2011-04-28 17:27:16 UTC
Version:           CVS HEAD (using KDE 4.6.2) 
OS:                Linux

(I'm not sure if xdebug plugin problem, but I tested it in both quanta and kdevelop and results are same)


"in old times" - kdevelop 4.1
stepping while debugging (php project) moved an arrow on the left side in the document/project according to frame stack.

Now arrow is not present nor documents are opened while debugging.
Framestack toolbar is correct and it remains the only way to follow steps.


Reproducible: Always
Comment 1 Florian 'branleb' Zumkeller-Quast 2011-08-27 13:48:17 UTC
Created attachment 63176 [details]
Patch for the missing signal parameter which fixes this bug

The Problem is that the Connection emits a Signal with only two paramters, But the DebugSession Signal expecteds three.
This leads to the missing Pointer.

Also upped to reviewboard...
Comment 2 Milian Wolff 2011-08-27 14:45:12 UTC
Git commit 71ae45fbb8457334cf66295e85af1ed1268a00d1 by Milian Wolff, on behalf of Florian Zumkeller-Quast.
Committed on 27/08/2011 at 15:39.
Pushed by mwolff into branch 'master'.

fixed signal parameters to match the KDevelop::IDebugSession::showStepInSource() signal.

The pointer now reappears and moves while stepping trough the code.

BUG: 271929

M  +4    -4    debuggers/xdebug/connection.h
M  +1    -1    debuggers/xdebug/debugsession.cpp
M  +5    -3    debuggers/xdebug/connection.cpp

http://commits.kde.org/quanta/71ae45fbb8457334cf66295e85af1ed1268a00d1