fixed signal parameters to match the KDevelop::IDebugSession::showStepInSource() signal.

The pointer now reappears and moves while stepping trough the code.

BUG: 271929